--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,13 @@
 [tool.poetry]
 name = "env-proxy"
-version = "0.1.0"
+version = "0.1.1"
 description = "Creates a class used to query environmental variables with typehinting a conversion to basic Python types."
 authors = ["Tomas Votava <info@tomasvotava.eu>"]
 license = "MIT"
+readme = "README.md"
+homepage = "https://github.com/tomasvotava/env-proxy"
+repository = "https://github.com/tomasvotava/env-proxy"
+documentation = "https://tomasvotava.github.io/env-proxy/"
 
 [tool.black]
 line_length = 119
