--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "env-proxy"
-version = "1.0.0"
+version = "1.1.0"
 description = "Creates a class used to query environmental variables with typehinting a conversion to basic Python types."
 authors = ["Tomas Votava <info@tomasvotava.eu>"]
 license = "MIT"
@@ -11,17 +11,28 @@ repository = "https://github.com/tomasvotava/env-proxy"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
 mypy = "^1.13.0"
-ruff = "^0.7.2"
+ruff = "^0.7.3"
+pytest-cov = "^6.0.0"
 
 [tool.poetry.dependencies]
-python = "^3.9,<3.14"
+python = ">=3.10,<3.14"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.pytest.ini_options]
+testpaths = ["tests/"]
+addopts = [
+    "-v",
+    "--cov=env_proxy",
+    "--cov-report=xml:coverage.xml",
+    "--cov-report=json:coverage.json",
+    "--cov-report=term-missing",
+]
+
 [tool.ruff]
-target-version = "py39"
+target-version = "py310"
 line-length = 120
 
 [tool.ruff.lint]
